[package]
name = "bufsize"
version = "1.0.0" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>", "Jeremy Fitzhardinge <jeremy@goop.org>"]
edition = "2018"
rust-version = "1.39"
license = "MIT OR Apache-2.0"
description = "bytes::BufMut implementation to count buffer size"
repository = "https://github.com/dtolnay/bufsize"
documentation = "https://docs.rs/bufsize"
readme = "README.md"

[dependencies]
bytes = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
