[package]
name = "bufsize"
version = "1.0.3" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>", "Jeremy Fitzhardinge <jeremy@goop.org>"]
categories = ["network-programming", "memory-management"]
description = "bytes::BufMut implementation to count buffer size"
documentation = "https://docs.rs/bufsize"
edition = "2018"
keywords = ["bytes"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/bufsize"
rust-version = "1.39"

[dependencies]
bytes = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
