[package]
name = "bufsize"
version = "1.0.8"
authors = ["David Tolnay <dtolnay@gmail.com>", "Jeremy Fitzhardinge <jeremy@goop.org>"]
categories = ["network-programming", "memory-management", "no-std"]
description = "bytes::BufMut implementation to count buffer size"
documentation = "https://docs.rs/bufsize"
edition = "2018"
keywords = ["bytes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/bufsize"
rust-version = "1.39"

[features]
default = ["std"]
std = []

[dependencies]
bytes = { version = "1.0", default-features = false }

[dev-dependencies]
anyhow = "1"
serde_json = "1"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
